--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -24,7 +24,7 @@ body {
 .search-container {
     width: 300px;
     height: 45px;
-    background-color: #253341;
+    background-color: #90909046;
     border-radius: 30px;
     display: flex;
 }
@@ -51,7 +51,7 @@ body {
 
 .search i{
 	font-size: 25px;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 .stores-list-container {
@@ -192,7 +192,7 @@ body {
 }
 
 .search-result-profile{
-    background-color: #253341;
+    background-color: #90909046;
     border-radius: 20px;
     padding: 15px;
     margin: 9px;
