--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,4 +1,5 @@
-{% extends "blog/base.html" %}
-{% block content %}
-    <h1>This social network was built by Redian Marku.</h1>
-{% endblock content %}
+{% extends "blog/base.html" %}<!---->
+{% block content %}<!---->
+    <center><h3>Esta red social fue implementada por Pablo Jasso Y Felipe Mayorga Alumnos de la Unidad Academica Jalpan UTSJR.</h3>
+   <img src="https://i.ibb.co/TkVbVCj/wolf.png" alt=""><!----></center>
+{% endblock content %}<!---->
