--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,59 +1,59 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/png" href="{% static 'blog/logo.png' %}">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous">
-        <title>BlogRoom</title>
-    </head>
-  <body>
-      <header class="site-header">
+{% load static %}<!---->
+<!doctype html><!---->
+<html lang="en"><!---->
+    <head><!---->
+        <meta charset="utf-8"><!---->
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!---->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"><!---->
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}"><!---->
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/style.css' %}"><!---->
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><!---->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!---->
+        <link rel="icon" type="image/png" href="https://i.ibb.co/TkVbVCj/wolf.png"><!---->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!---->
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-zrnmn8R8KkWl12rAZFt4yKjxplaDaT7/EUkKm7AovijfrQItFWR7O/JJn4DAa/gx" crossorigin="anonymous"><!---->
+        <title>WOLFER</title><!---->
+    </head><!---->
+  <body><!---->
+      <header class="site-header"><!---->
       <nav
               style="border-bottom: 1px solid rgba(255, 255, 255, 0.1)"
-              class="navbar navbar-expand navbar-dark bg-steel">
-        <div class="container">
-          <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto pl-2">
-              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
-            </div>
-                        <div class="navbar-nav pr-2">
-                {% if user.is_authenticated %}
-                    <a class="nav-item nav-link" href="{% url 'post-create' %}">Create a Tweet</a>
-                    <a class="nav-item nav-link" href="{% url 'profile' %}">Settings</a>
-                    <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
-                {% else %}
-                    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                    <a class="nav-item nav-link" href="{% url 'register-users' %}">Register</a>
-                {% endif %}
-            </div>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main role="main" class="container-fluid">
-      <br>
-      <div class="row">
-        <div class="col-md-12">
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-            {% endif %}
-          {% block content %}{% endblock %}
-        </div>
-      </div>
-    </main>
+              class="navbar navbar-expand navbar-dark bg-steel"><!---->
+        <div class="container"><!---->
+          <div class="collapse navbar-collapse" id="navbarToggle"><!---->
+            <div class="navbar-nav mr-auto pl-2"><!---->
+              <a class="nav-item nav-link" href="{% url 'blog-home' %}">Inicio</a><!---->
+              <a class="nav-item nav-link" href="{% url 'blog-about' %}">Nosotros</a><!---->
+            </div><!---->
+                        <div class="navbar-nav pr-2"><!---->
+                {% if user.is_authenticated %}<!---->
+                    <!--<a class="nav-item nav-link" href="{% url 'post-create' %}">Crear Tweet</a>-->
+                    <!--<a class="nav-item nav-link" href="{% url 'profile' %}">Configuración</a>-->
+                    <a class="nav-item nav-link" href="{% url 'logout' %}">Cerrar sesion</a><!---->
+                {% else %}<!---->
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Iniciar Sesion</a><!---->
+                    <a class="nav-item nav-link" href="{% url 'register-users' %}">Registrarme</a><!---->
+                {% endif %}<!---->
+            </div><!---->
+          </div><!---->
+        </div><!---->
+      </nav><!---->
+    </header><!---->
+    <main role="main" class="container-fluid"><!---->
+      <br><!---->
+      <div class="row"><!---->
+        <div class="col-md-12"><!---->
+            {% if messages %}<!---->
+                {% for message in messages %}<!---->
+                    <div class="alert alert-{{ message.tags }}"><!---->
+                        {{ message }}<!---->
+                    </div><!---->
+                {% endfor %}<!---->
+            {% endif %}<!---->
+          {% block content %}{% endblock %}<!---->
+        </div><!---->
+      </div><!---->
+    </main><!---->
 
 
     <!-- Optional JavaScript -->
