--- a/blog/templates/blog/post_delete.html
+++ b/blog/templates/blog/post_delete.html
@@ -4,14 +4,14 @@
     <form method="POST" class="col-6 no-padding">
         {% csrf_token %}
         <fieldset class="form-group white-important">
-            Do you really want to delete
+           ¿Desea elimiar el tweet?
         </fieldset>
-        <p class="bg-steel p-2"
+        <p class="textarea form-control"
            style="border: 1px solid white; border-radius: 4px; word-wrap: break-word;">
            {{ post.content }}
         </p>
         <div class="form-group">
-            <button class="btn btn-outline-primary" type="submit">Yes</button>
+            <button class="btn btn-outline-primary" type="submit">Aceptar</button>
         </div>
     </form>
 </div>
