--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <div class="alert alert-info">
-        done
+        Realizado
     </div>
 </div>
 {% endblock content %}
